--- a/index.html
+++ b/index.html
@@ -2,16 +2,28 @@
 <html>
   <head>
     <title>noahs website</title>
+    <link rel="stylesheet" href="style.css">
     <body>
-      <div>
+      <!-- All content goes here -->.
+      <div id="all-contents"> 
         <nav>
+          <h1>Noahs website</h1>
+          <ul>
+          <li><a href="http://"> home </a> 
+          </li>
+          <li><a href="http://"> portfolio </a>
+          </li>
+          </ul>
+        </nav>
           <main>
             <div>
               <h2>noah</h2>
               <p>student at nomma</p>
+              </div>
               <!-- Interests section -->
-              <img src="<img src="https://i.redd.it/oeuzu931m3ba1.jpg" >
-              <div><h3>interests</h3>
+              <div>
+              <img src="https://art.ngfiles.com/images/2726000/2726341_roddy02_white-mask-varre-illustration.jpg?f1662833425" alt="">
+            </div> <h3>interests</h3>
               <ul>
                 <li>fishing</li>
                 <li>video games</li>
@@ -22,7 +34,6 @@
               <h2></h2>
             </div>
           </main>
-        </nav>
       </div>
     </body>
   </head>
