--- a/index.html
+++ b/index.html
@@ -2,40 +2,41 @@
 <html>
   <head>
     <title>noahs website</title>
-    <link rel="stylesheet" href="style.css">
-    <body>
-      <!-- All content goes here -->.
-      <div id="all-contents"> 
-        <nav>
-          <h1>Noahs website</h1>
-          <ul>
-          <li><a href="http://"> home </a> 
-          </li>
-          <li><a href="http://"> portfolio </a>
-          </li>
-          </ul>
-        </nav>
-          <main>
-            <div>
-              <h2>noah</h2>
-              <p>student at nomma</p>
-              </div>
-              <!-- Interests section -->
-              <div>
-              <img src="https://art.ngfiles.com/images/2726000/2726341_roddy02_white-mask-varre-illustration.jpg?f1662833425" alt="">
-            </div> <h3>interests</h3>
-              <ul>
-                <li>fishing</li>
-                <li>video games</li>
-                <li>fantasy literature</li>
-              </ul>
-            </div>
-            <div>
-              <h2></h2>
-            </div>
-          </main>
-      </div>
-    </body>
+    <link rel="stylesheet" href="style.css" />
   </head>
+  <body>
+    <!-- All content goes here -->.
+    <div id="all-contents">
+      <nav>
+        <h1>Noahs website</h1>
+        <ul id="nav-ul">
+          <li class="nav-li"><a href="index.html"> home </a></li>
+          <li class="nav-li"><a href="portfolio.html"> portfolio </a></li>
+        </ul>
+      </nav>
+      <main>
+        <!-- Sidebar section -->
+        <div class="sidebar">
+          <img
+            class="sidebar-img"
+            src="https://art.ngfiles.com/images/2726000/2726341_roddy02_white-mask-varre-illustration.jpg?f1662833425"
+            alt=""
+          />
+        </div>
+        <div>
+          <h2>noah</h2>
+          <p>student at nomma</p>
+          <!-- Interests section -->
+          <div>
+            <h3>interests</h3>
+            <ul>
+              <li>fishing</li>
+              <li>video games</li>
+              <li>fantasy literature</li>
+            </ul>
+          </div>
+        </div>
+      </main>
+    </div>
+  </body>
 </html>
-
