blessed is the orccursed blood my lambkin

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             alt=""
           />
         </div>
+        <!-- Content section -->
         <div>
+          class="content"
           <h2>noah</h2>
           <p>student at nomma</p>
           <!-- Interests section -->
