--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
           />
         </div>
         <!-- Content section -->
-        <div>
-          class="content"
+        <div class="content">
+         
           <h2>noah</h2>
           <p>student at nomma</p>
           <!-- Interests section -->
