the blessed gold mask

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <h2>noah</h2>
           <p>student at nomma</p>
           <!-- Interests section -->
-          <div>
+          <div id="interests">
             <h3>interests</h3>
             <ul>
               <li>fishing</li>
