--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>noahs website</title>
+    <title>Noah's website</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- All content goes here -->.
     <div id="all-contents">
       <nav>
-        <h1>Noahs website</h1>
+        <h1>Noah's website</h1>
         <ul id="nav-ul">
           <li class="nav-li"><a href="index.html"> home </a></li>
           <li class="nav-li"><a href="portfolio.html"> portfolio </a></li>
@@ -27,14 +27,14 @@
         <div class="content">
          
           <h2>noah</h2>
-          <p>student at nomma</p>
+          <p>Student at Nomma</p>
           <!-- Interests section -->
           <div id="interests">
             <h3>interests</h3>
             <ul>
-              <li>fishing</li>
-              <li>video games</li>
-              <li>fantasy literature</li>
+              <li>Fishing</li>
+              <li>Video Games</li>
+              <li>Fantasy Literature</li>
             </ul>
           </div>
         </div>
