--- a/portfolio.html
+++ b/portfolio.html
@@ -1,8 +1,48 @@
 <!DOCTYPE html>
 <html>
-  <head> Noah's website </head>
+  <head>
+    <title><h1> Noah's website </h1></title>
+    <link rel="stylesheet" href="style.css">
+  </head>
 
   <body>
-    <div id="all-contents"></div>
+    <div id="all-contents">
+      <nav>
+        <main>
+          <div class="content">
+            <h1>Portfolio</h1>
+            <ul id="portfolio">
+              <li>
+                <a href="projects/platformer/"
+                  >Platformer : A cannon - dodging, collectible - grabbing
+                  adventure game for Halleb0t</a
+                >
+              </li>
+              <li>
+                <a href="projects/bouncing-box/"
+                  >Bouncing Box : A project that gives you a taste of game
+                  development on the web
+                </a>
+              </li>
+              <li>
+                <a href="projects/circularity/"
+                  >Circularity : A motion poem using random number generation
+                  and velocity applied to circle shapes...</a
+                >
+              </li>
+            </ul>
+          </div>
+        </main>
+        <h1>Noah's Website</h1>
+        <ul id="nav-ul">
+          <li class="nav-li">
+            <a class="nav-a" href="index.html">Home</a>
+          </li>
+          <li class="nav-li">
+            <a class="nav-a" href="portfolio.html">Portfolio</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </body>
 </html>
