--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -49,7 +49,7 @@
 
 			// moves the Box to a new position on the screen along the X-Axis
 			function moveBoxTo(newPositionX) {
-				box.css("left", newPositionX);
+				box.css("left", 300);
 			}
 
 			// changes the text displayed on the Box
@@ -71,7 +71,7 @@
 			turn it around! 
 			*/
 			function update() {
-				
+			Moveboxto(100)	
 
 			};
 
